Adição de insert de multiplas questões
Renomeação do namespace da  classe de questão
